feat: changed insert_account for update_account using PUT
